tests/sksl/errors/UndefinedSymbol.dsl.glsl
### Compilation failed:

error: unknown identifier 'x'

1 error
